package de.raywo.banking.domain;

public interface Identifiable<T> {

  T getId();

}
